<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="right"
    android:gravity="right"
    android:layoutDirection="rtl"
    >
    <item
        android:id="@+id/tags_item_menu"
        android:icon="@drawable/ic_label_24dp"
        android:title="@string/app_bar_tag"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings_item_menu"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/app_bar_setting"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/about_item_menu"
        android:icon="@drawable/ic_about_black_24dp"
        android:title="@string/app_bar_about"
        app:showAsAction="never"
        />

</menu>