<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    tools:context=".Add_Acc_Frd">

    <TextView
        android:id="@+id/title_acc_add_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/account_add"
        style="@style/MainTitle_Style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/acc_accept_imgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:background="@android:color/transparent"
        android:paddingLeft="4dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_done_gr"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/title_acc_add_txt"
        app:layout_constraintStart_toEndOf="@+id/acc_cancel_imgBtn"
        app:layout_constraintTop_toTopOf="@+id/title_acc_add_txt" />

    <ProgressBar
        android:id="@+id/acc_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/acc_accept_imgBtn"
        app:layout_constraintEnd_toEndOf="@+id/acc_accept_imgBtn"
        app:layout_constraintStart_toStartOf="@+id/acc_accept_imgBtn"
        app:layout_constraintTop_toTopOf="@+id/acc_accept_imgBtn" />

    <ImageButton
        android:id="@+id/acc_cancel_imgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="4dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_clear_rd"
        app:layout_constraintBottom_toBottomOf="@+id/acc_accept_imgBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/acc_accept_imgBtn" />

    <View
        android:id="@+id/view9"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/hLine"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_acc_add_txt" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Title_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/acc_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view9" />

    <EditText
        android:id="@+id/acc_name_etxt"
        style="@style/EditText_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_acc_name"
        android:inputType="textCapWords"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/acc_pri_balance_etxt"
        app:layout_constraintStart_toStartOf="@+id/acc_pri_balance_etxt" />

    <TextView
        android:id="@+id/account_cost_title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/default_balance"
        style="@style/Title_Style"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/acc_pri_balance_etxt"
        style="@style/EditText_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/hint_cost"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/account_cost_title_txt"
        app:layout_constraintEnd_toStartOf="@+id/account_cost_title_txt"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        style="@style/Title_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/acc_condition"
        app:layout_constraintEnd_toEndOf="@+id/account_cost_title_txt"
        app:layout_constraintTop_toBottomOf="@+id/account_cost_title_txt" />


    <RadioGroup
        android:id="@+id/condition_rad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/acc_pri_balance_etxt"
        app:layout_constraintTop_toTopOf="@+id/textView8">

        <RadioButton
            android:id="@+id/acc_diac_rad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/account_diactive" />

        <RadioButton
            android:id="@+id/acc_ac_rad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:checked="true"
            android:text="@string/account_active" />

    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>