<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    tools:context=".Add_Loan_Frd">

    <TextView
        android:id="@+id/title_add_loan_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="end|center_vertical"
        android:text="@string/title_add_loan"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/loan_accept_imBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="4dp"
        android:background="@android:color/transparent"
        android:paddingLeft="4dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_done_gr"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/title_add_loan_txt"
        app:layout_constraintStart_toEndOf="@+id/loan_cancel_imgBtn"
        app:layout_constraintTop_toTopOf="@+id/title_add_loan_txt" />

    <ProgressBar
        android:id="@+id/loan_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/loan_accept_imBtn"
        app:layout_constraintEnd_toEndOf="@+id/loan_accept_imBtn"
        app:layout_constraintStart_toStartOf="@+id/loan_accept_imBtn"
        app:layout_constraintTop_toTopOf="@+id/loan_accept_imBtn" />

    <ImageButton
        android:id="@+id/loan_cancel_imgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="4dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_clear_rd"
        app:layout_constraintBottom_toBottomOf="@+id/loan_accept_imBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loan_accept_imBtn" />

    <View
        android:id="@+id/view6"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/hLine"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_add_loan_txt" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/name_loan"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <TextView
        android:id="@+id/loan_title_cost_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cost_loan"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/count_loan"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loan_title_cost_txt"
        app:layout_constraintTop_toBottomOf="@+id/loan_title_cost_txt" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/date_loan"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/title_loan_etxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_loan_name"
        android:inputType="textCapWords"
        style="@style/EditText_Style"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="@+id/cost_loan_etxt"
        app:layout_constraintStart_toStartOf="@+id/cost_loan_etxt"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <EditText
        android:id="@+id/cost_loan_etxt"
        style="@style/EditText_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cost"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/count_loan_etxt"
        app:layout_constraintStart_toStartOf="@+id/count_loan_etxt"
        app:layout_constraintTop_toTopOf="@+id/loan_title_cost_txt"
        app:layout_constraintBottom_toBottomOf="@+id/loan_title_cost_txt"
        />

    <EditText
        android:id="@+id/count_loan_etxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:hint="@string/hint_loan_count"
        android:inputType="number"
        style="@style/EditText_Style"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="@+id/dates_loan_etxt"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dates_loan_etxt"
        style="@style/EditText_Style.DateTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintEnd_toStartOf="@+id/textView18"
        app:layout_constraintStart_toEndOf="@+id/add_date_imgbtn"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <ImageButton
        android:id="@+id/add_date_imgbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="4dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_add_date"
        app:layout_constraintBottom_toBottomOf="@+id/dates_loan_etxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dates_loan_etxt" />


</androidx.constraintlayout.widget.ConstraintLayout>